# beanz

./: .codecov.yml  .gitignore  AGENTS.md  AI.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  sync_agent_rules.py
.clusterfuzzlite/: Dockerfile  build.sh  project.yaml
.cursor/rules/: beanz-agent.mdc
.github/: CODEOWNERS  SECURITY.md
.github/workflows/: build-test.yml  ci.yml  clusterfuzzlite.yml  dependency-release-age.yml  dependency-review.yml  osv-scanner.yml  release.yml  scorecard.yml
Formula/: beanz.rb
fuzz/: Cargo.toml
fuzz/fuzz_targets/: cyclomatic_java.rs  cyclomatic_python.rs  cyclomatic_rust.rs  parse_claude_line.rs  parse_cursor_line.rs  read_est_claude_line.rs  read_est_claude_session.rs  read_est_cursor_line.rs  read_est_cursor_session.rs
scripts/: check_dependency_release_age.py
src/: cli.rs  complexity.rs  display.rs  edits.rs  features.rs  harness.rs  lib.rs  main.rs  score_snapshot.rs  scoring.rs  session.rs  session_scan.rs  strictness.rs  transcript.rs  workspace.rs
src/claude/: mod.rs  sessions.rs  transcript.rs
src/cursor/: harness.rs  mod.rs  sessions.rs  transcript.rs
tests/: cli_test.rs  complexity_test.rs  display_test.rs  document_task_test.rs  features_test.rs  grade_meter_test.rs  harness_test.rs  lifecycle_test.rs  probes_test.rs  risk_test.rs  score_parity_claude_test.rs  score_parity_test.rs  scoring_test.rs  sessions_claude_test.rs  sessions_test.rs  strictness_test.rs  suggestion_test.rs  trajectory_test.rs  transcript_claude_test.rs  transcript_cursor_test.rs  workspace_test.rs
tests/harness_factory/: mod.rs
