[package]
name = "beanz"
version = "1.0.0"
edition = "2021"
authors = ["David Pope"]
description = "Cognitive debt scoring for AI coding sessions"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "8"
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-java = "0.23"
